--- a/src/styles/modules/_floating-label.scss
+++ b/src/styles/modules/_floating-label.scss
@@ -11,6 +11,7 @@
     transition: 0.2s ease all;
     font-size: 14px;
     padding: 0 4px !important;
+    height: 28px;
 
     label {
       color: #7a7a7a;
