--- a/src/styles/modules/_flash-card.scss
+++ b/src/styles/modules/_flash-card.scss
@@ -36,6 +36,10 @@
 }
 
 .content {
-  padding-top: 30%;
-  font-size: 40pt;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  font-size: 32pt;
 }
