--- a/src/styles/antd/_input.scss
+++ b/src/styles/antd/_input.scss
@@ -1,4 +1,4 @@
-input.ant-input-lg {
+input.ant-input-lg, .ant-input-affix-wrapper-lg {
   border-radius: 20px;
   padding-left: 16px;
   padding-right: 16px;
