--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,9 +7,32 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
   --primary-color: #1a1a1a;
-  --main-bg: #1677ff;
+  --main-bg: #FFFD;
+}
+
+.dark {
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
+  --primary-color: #e3e3e3;
+  --main-bg: #1b1b1d;
 }
 
 body {
   color: var(--primary-color);
+  background-color: var(--main-bg);
+  font-size: 14px;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
 }
