--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,20 +6,22 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
-  --primary-color: #1a1a1a;
-  --main-bg: #FFFD;
+  --main-text: #1a1a1a;
+  --primary: rgb(168 85 247);
+  --main-bg: #fffd;
 }
 
 .dark {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
-  --primary-color: #e3e3e3;
+  --main-text: #e3e3e3;
+  --primary: rgb(168 85 247);
   --main-bg: #1b1b1d;
 }
 
 body {
-  color: var(--primary-color);
+  color: var(--main-text);
   background-color: var(--main-bg);
   font-size: 14px;
   overflow-x: hidden;
