--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
   --main-text: #1a1a1a;
-  --primary: rgb(168 85 247);
+  --primary: #4096ff;
   --main-bg: #fffd;
 }
 
