--- a/src/styles/antd/index.scss
+++ b/src/styles/antd/index.scss
@@ -1,3 +1,9 @@
+i[class*="fa-"] {
+  &:not([class*="text-"]) {
+    color: var(--icon-color);
+  }
+}
+
 @import './button';
 @import './collapse';
 @import './input';
