--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,8 +17,9 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
   --main-text: #e3e3e3;
-  --primary: rgb(168 85 247);
+  --primary: #4096ff;
   --main-bg: #1b1b1d;
+  --icon-color: #e3e3e3;
 }
 
 body {
