--- a/src/styles/antd/_input.scss
+++ b/src/styles/antd/_input.scss
@@ -1,5 +1,12 @@
-input.ant-input-lg, .ant-input-affix-wrapper-lg {
+input.ant-input-lg,
+.ant-input-affix-wrapper-lg {
   border-radius: 20px;
   padding-left: 16px;
   padding-right: 16px;
+}
+
+.dark {
+  input::placeholder {
+    color: rgb(107 114 128);
+  }
 }
