--- a/src/styles/modules/components/_audio-player.scss
+++ b/src/styles/modules/components/_audio-player.scss
@@ -52,5 +52,6 @@ $waveLength: 48% 49% 47% 42% 40% 48% 25% 30% 32% 42% 49% 48% 42% 38% 20% 18% 35%
   to {
     height: random(20)+0px;
     opacity: .90;
+    height: random(27)+0px;
   }
 }
