--- a/src/styles/antd/_button.scss
+++ b/src/styles/antd/_button.scss
@@ -2,14 +2,8 @@
   background-color: var(--primary, #1677ff);
 }
 
-.ant-btn.ant-btn-lg {
-  border-radius: 20px;
-}
-
-button.ant-btn {
-  display: inline-flex;
-  gap: 8px;
-  align-items: center;
+button.ant-btn.ant-btn-lg {
+  border-radius: 40px;
 }
 
 .dark {
