--- a/src/styles/antd/_data_viewer.scss
+++ b/src/styles/antd/_data_viewer.scss
@@ -1,3 +1,11 @@
 .ant-collapse-content-box {
   white-space: break-spaces;
 }
+
+.ant-drawer-content-wrapper {
+  max-width: 75vw !important;
+}
+
+.ant-avatar {
+  background-color: rgb(30 41 59) !important;
+}
