--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,7 @@
   --main-text: #1a1a1a;
   --primary: #4096ff;
   --main-bg: #fffd;
+  --main-active-bg: #fff;
   --icon-color: #1e3050;
 }
 
@@ -17,9 +18,11 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
   --main-text: #e3e3e3;
-  --primary: #4096ff;
+  --primary: #6366f1;
   --main-bg: #1b1b1d;
+  --main-active-bg: #262626;
   --icon-color: #e3e3e3;
+  --line-color: #737070;
 }
 
 body {
