--- a/src/styles/antd/_input.scss
+++ b/src/styles/antd/_input.scss
@@ -9,4 +9,17 @@ input.ant-input-lg,
   input::placeholder {
     color: rgb(107 114 128);
   }
+
+  .ant-input-affix-wrapper-focused, .ant-input-affix-wrapper:not(.ant-input-affix-wrapper-disabled) {
+
+    &:hover,
+    &:focus {
+      border-color: var(--primary);
+    }
+  }
+
+  .ant-input-affix-wrapper-focused {
+    border-color: var(--primary);
+    outline: solid 1px var(--primary);
+  }
 }
