--- a/src/styles/antd/_data_viewer.scss
+++ b/src/styles/antd/_data_viewer.scss
@@ -10,8 +10,10 @@
   }
 }
 
-.ant-avatar {
-  background-color: rgb(30 41 59) !important;
+.dark {
+  .ant-avatar {
+    background-color: rgb(80 96 123) !important;
+  }
 }
 
 .no-top-border-collapse {
