--- a/src/styles/antd/_data_viewer.scss
+++ b/src/styles/antd/_data_viewer.scss
@@ -14,6 +14,10 @@
   .ant-avatar {
     background-color: rgb(80 96 123) !important;
   }
+
+  .ant-spin-dot-item {
+    background-color: var(--icon-color);
+  }
 }
 
 .no-top-border-collapse {
