--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,8 @@
   --background-end-rgb: 255, 255, 255;
   --main-text: #e3e3e3;
   --primary: #6366f1;
-  --main-bg: #1b1b1d;
-  --main-active-bg: #262626;
+  --main-bg: rgba(0,0,0,.8);
+  --main-active-bg: #222327;
   --icon-color: #e3e3e3;
   --line-color: #737070;
 }
