--- a/src/styles/antd/_button.scss
+++ b/src/styles/antd/_button.scss
@@ -8,12 +8,12 @@ button.ant-btn.ant-btn-lg {
 
 .dark {
   .ant-btn-primary {
-    box-shadow: inset 0 0 0.5px 1px hsla(0, 0%,
-        100%, 0.075),
-      0 0 0 1px hsla(0, 0%, 0%, 0.05),
-      0 0.3px 0.4px hsla(0, 0%, 0%, 0.02),
-      0 0.9px 1.5px hsla(0, 0%, 0%, 0.045),
-      0 3.5px 6px hsla(0, 0%, 0%, 0.09);
+    // box-shadow: inset 0 0 0.5px 1px hsla(0, 0%,
+    //     100%, 0.075),
+    //   0 0 0 1px hsla(0, 0%, 0%, 0.05),
+    //   0 0.3px 0.4px hsla(0, 0%, 0%, 0.02),
+    //   0 0.9px 1.5px hsla(0, 0%, 0%, 0.045),
+    //   0 3.5px 6px hsla(0, 0%, 0%, 0.09);
     background-color: #475569;
 
     &:not(:disabled):not(.ant-btn-disabled):hover {
