--- a/src/styles/antd/_button.scss
+++ b/src/styles/antd/_button.scss
@@ -6,6 +6,12 @@ button.ant-btn.ant-btn-lg {
   border-radius: 40px;
 }
 
+.ant-btn-link {
+  span {
+    text-decoration-line: underline;
+  }
+}
+
 .dark {
   .ant-btn-primary {
     // box-shadow: inset 0 0 0.5px 1px hsla(0, 0%,
