--- a/src/styles/antd/_button.scss
+++ b/src/styles/antd/_button.scss
@@ -1,5 +1,5 @@
 .ant-btn-primary:not(.ant-btn-danger) {
-  background-color: var(--primary, #1677ff);
+  background-color: #1677ff;
 }
 
 button.ant-btn.ant-btn-lg {
