--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
-  --main-text: #1a1a1a;
+  --main-text: rgba(0, 0, 0, 0.88);
   --primary: #fb9a60;
   --main-bg: #fffd;
   --main-active-bg: #fff;
