--- a/src/styles/antd/_button.scss
+++ b/src/styles/antd/_button.scss
@@ -3,7 +3,9 @@
 }
 
 button.ant-btn.ant-btn-lg {
-  border-radius: 40px;
+  border-radius: 8px;
+  padding: 4px 16px;
+  height: fit-content;
 }
 
 .ant-btn-link {
