--- a/src/styles/modules/components/_audio-player.scss
+++ b/src/styles/modules/components/_audio-player.scss
@@ -1,4 +1,5 @@
-$waveW: 0.3em;
+$waveW: 0.25em;
+$waveH: 28px;
 $waveEnd: #594bab;
 $waveStart: #5fd2ff;
 $waveLength: 48% 49% 47% 42% 40% 48% 25% 30% 32% 42% 49% 48% 42% 38% 20% 18% 35% 18% 20% 22% 32% 36% 5% 49% 48% 40% 20% 22% 29% 39% 42% 48% 49% 40% 20% 18% 35% 20% 22% 32% 36% 42% 40% 48% 25% 30% 32% 12% 20% 40% 48%;
@@ -7,18 +8,19 @@ $waveLength: 48% 49% 47% 42% 40% 48% 25% 30% 32% 42% 49% 48% 42% 38% 20% 18% 35%
   display: inline-block;
   width: $waveW;
   min-height: 10px;
+  border-radius: 50px;
 }
 
 @for $i from 1 through length($waveLength) {
   .sound-wave-bar:nth-child(#{$i}) {
     background: mix($waveStart, $waveEnd, ($i/length($waveLength)) * 100%);
-    height: random(27)+0px;
+    height: random($waveH)+0px;
   }
 }
 
 .sound-wave {
   display: flex;
-  gap: 1px;
+  gap: 2px;
   white-space: nowrap;
   min-height: 34px;
   align-items: center;
@@ -40,18 +42,16 @@ $waveLength: 48% 49% 47% 42% 40% 48% 25% 30% 32% 42% 49% 48% 42% 38% 20% 18% 35%
 
 @keyframes soundwave {
   from {
-    transform: scale3d(1, 1, 1);
     opacity: .90;
   }
 
   50% {
-    height: random(27)+0px;
+    height: $waveH;
     opacity: 1;
   }
 
   to {
-    height: random(20)+0px;
     opacity: .90;
-    height: random(27)+0px;
+    height: random($waveH)+0px;
   }
 }
