--- a/src/styles/antd/_form.scss
+++ b/src/styles/antd/_form.scss
@@ -1,5 +1,9 @@
 .ant-form-item {
   margin-bottom: 16px;
+  label {
+    font-weight: 500;
+    text-transform: capitalize;
+  }
 }
 
 .ant-modal-close-x {
