--- a/src/styles/antd/index.scss
+++ b/src/styles/antd/index.scss
@@ -1,5 +1,5 @@
 [class*="ant-"], .ant-form-item .ant-form-item-label >label {
-  font-size: 16px;
+  font-family: inherit;
 }
 
 @import './button';
