--- a/src/styles/antd/_button.scss
+++ b/src/styles/antd/_button.scss
@@ -2,6 +2,12 @@
   background-color: #1677ff;
 }
 
+.ant-btn {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
+
 button.ant-btn.ant-btn-lg {
   border-radius: 8px;
   padding: 4px 16px;
