--- a/src/styles/antd/_button.scss
+++ b/src/styles/antd/_button.scss
@@ -1,5 +1,5 @@
 .ant-btn-primary:not(.ant-btn-danger) {
-  background-color: #1677ff;
+  background-color: var(--primary);
 }
 
 .ant-btn {
@@ -23,12 +23,6 @@ button.ant-btn.ant-btn-link {
 
 .dark {
   .ant-btn-primary {
-    // box-shadow: inset 0 0 0.5px 1px hsla(0, 0%,
-    //     100%, 0.075),
-    //   0 0 0 1px hsla(0, 0%, 0%, 0.05),
-    //   0 0.3px 0.4px hsla(0, 0%, 0%, 0.02),
-    //   0 0.9px 1.5px hsla(0, 0%, 0%, 0.045),
-    //   0 3.5px 6px hsla(0, 0%, 0%, 0.09);
     background-color: #475569;
 
     &:not(:disabled):not(.ant-btn-disabled):hover {
