--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
   --main-text: #1a1a1a;
-  --primary: #6366f1;
+  --primary: rgb(63, 66, 233);
   --main-bg: #fffd;
   --main-active-bg: #fff;
   --icon-color: #1e3050;
